--- a/composer.json
+++ b/composer.json
@@ -1,21 +1,16 @@
 {
-    "name": "laravel-license/auth-package",
-    "description": "Laravel License Management System",
-    "type": "library",
+    "name": "fenixthelord/laravel-license-package",
+    "description": "A Laravel package to manage licenses.",
+    "version": "1.0.0-beta",
+    "license": "MIT", 
+    "authors": [
+        {
+            "name": "Muhammad Khalaf",
+            "email": "fenixthelord@gmail.com"
+        }
+    ],
     "require": {
         "php": "^8.1",
-        "laravel/framework": "^10.0"
-    },
-    "autoload": {
-        "psr-4": {
-            "LaravelLicense\\License\\": "src/"
-        }
-    },
-    "extra": {
-        "laravel": {
-            "providers": [
-                "LaravelLicense\\License\\LicenseServiceProvider"
-            ]
-        }
+        "illuminate/support": "^8.0|^9.0"
     }
 }
