--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,6 @@
     ],
     "require": {
         "php": "^8.1",
-        "illuminate/support": "^8.0|^9.0"
+         "illuminate/support": "^8.0|^9.0|^10.0"
     }
 }
