--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Fenixthelord\\LaravelLicense\\LicenseServiceProvider"
+                "Fenixthelord\\LaravelLicense\\Providers\\LicenseServiceProvider"
             ],
             "aliases": {}
         }
