--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "fenixthelord/laravel-license-package",
     "description": "A Laravel package to manage licenses.",
-    "version": "1.0.3.2", 
+    "version": "1.0.3.3", 
     "license": "MIT", 
     "authors": [
         {
@@ -15,13 +15,13 @@
     },
     "autoload": {
         "psr-4": {
-            "Fenixthelord\\LaravelLicense\\": "src/"
+            "Fenixthelord\\License\\": "src/"
         }
     },
     "extra": {
         "laravel": {
             "providers": [
-                "Fenixthelord\\LaravelLicense\\Providers\\LicenseServiceProvider"
+                "Fenixthelord\\License\\Providers\\LicenseServiceProvider"
             ],
             "aliases": {}
         }
