--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "fenixthelord/laravel-license-package",
     "description": "A Laravel package to manage licenses.",
-    "version": "1.0.4.9", 
+    "version": "1.0.4.10", 
     "license": "MIT", 
     "authors": [
         {
@@ -11,7 +11,9 @@
     ],
     "require": {
         "php": "^8.1",
-        "illuminate/support": "^10.0|^11.0"
+        "illuminate/support": "^10.0|^11.0",
+        "filament/filament": "^3.0",
+         "fenixthelord/laravel-license-package": "*"
     },
     "autoload": {
         "psr-4": {
