--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
     "require": {
         "php": "^8.1",
         "illuminate/support": "^10.0|^11.0",
-        "filament/filament": "^3.0",
-         "fenixthelord/laravel-license-package": "*"
+        "filament/filament": "^3.0"
+        
     },
     "autoload": {
         "psr-4": {
